# notebooks

./: .codecov.yml  .coderabbit.yaml  .disconnected-readiness.yaml  .dockerignore  .editorconfig  .env.mcp.local  .env.mcp.local.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pinact.yaml  .pre-commit-config.yaml  .syft.yaml  .travis.yml  AGENTS.md  ARCHITECTURE.md  Agents.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  Makefile  Makefile.tekton  OWNERS  README.md  SECURITY.md  UPDATES.md  agawef  asg  delete-branches.sh  nb  pyproject.toml  pytest.ini  sdfg  semgrep.yaml  settings.toml  trivy.yaml  uv  uv.toml  versions_config.yml  (+1 more)
base-images/copr/: README.md  copr_client.py  dependency_resolver.py  koji_client.py  manifest_schema.json  models.py  packages.yaml  pyproject.toml  rebuild.py  spec.md
base-images/copr/src/copr_rebuild/: __init__.py  copr_client.py  dependency_resolver.py  koji_client.py  manifest_schema.json  models.py  packages.yaml  rebuild.py
ci/agentic-reviewer/: AGENTS.md  README.md  pyproject.toml
ci/agentic-reviewer/src/odh_ci_agent/: agent_context.py  ci_summary.py  fetch_pr_source_snapshot.py  github_api.py  (+13 more)
codeserver/ubi9-python-3.12/: Dockerfile.cpu  Dockerfile.cpu.vath  Dockerfile.konflux.cpu  Dockerfile.vath  Pipfile  README.md  devel_env_setup.sh  fix-shrinkwrap-paths.sh  get_code_server_rpm.sh  pylock.toml  pyproject.toml  requirements-rhoai.txt  requirements.cpu.txt  requirements.txt  run-code-server.sh  run-nginx.sh  s390x.patch  setup-offline-binaries.sh
codeserver/ubi9-python-3.12/build-args/: cpu.conf  konflux.cpu.conf
codeserver/ubi9-python-3.12/httpd/: codeserver-cgi.conf  httpd.conf
codeserver/ubi9-python-3.12/patches/: PATCHES.md  README.md  codeserver-offline-env.sh  s390x.patch
codeserver/ubi9-python-3.12/prefetch-input/: artifacts.in.yaml  artifacts.lock.yaml  centos.repo  requirements-build-system-extras.in  requirements-build-system-extras.txt  requirements-wheel-build.txt  rhsm-pulp.repo  rpms.in.yaml  rpms.lock.yaml
codeserver/ubi9-python-3.12/test/: README.md  probe_check.py  test_startup.py  test_startup.sh
codeserver/ubi9-python-3.12/utils/: codeserver-offline-env.sh  ms-python.python-2026.0.0.vsix  ms-toolsai.jupyter-2025.8.0.vsix  ms-toolsai.jupyter-2025.9.1.vsix  ms-toolsai.jupyter-keymap-1.1.2.vsix  ms-toolsai.vscode-jupyter-cell-tags-0.1.9.vsix  ms-toolsai.vscode-jupyter-slideshow-0.1.6.vsix  ms-vscode.js-debug-companion.1.1.3.vsix  ms-vscode.js-debug.1.105.0.vsix  ms-vscode.js-debug.1.112.0.vsix  ms-vscode.vscode-js-profile-table.1.0.10.vsix
codeserver/ubi9-python-3.12/uv.lock.d/: pylock.cpu.toml  rh-wheel-only.ref.toml
dependencies/datascience/: pyproject.toml
dependencies/db-connectors/: pyproject.toml
dependencies/jupyterlab/: pyproject.toml
dependencies/jupyterlab-datascience/: pyproject.toml
dependencies/odh-notebooks-meta-db-connectors-deps/: pyproject.toml
dependencies/odh-notebooks-meta-jupyterlab-datascience-deps/: pyproject.toml
dependencies/odh-notebooks-meta-jupyterlab-deps/: pyproject.toml
dependencies/odh-notebooks-meta-llmcompressor-deps/: pyproject.toml
dependencies/odh-notebooks-meta-runtime-datascience-deps/: pyproject.toml
dependencies/odh-notebooks-meta-runtime-elyra-deps/: pyproject.toml
dependencies/odh-notebooks-meta-runtime-kale-deps/: pyproject.toml
dependencies/odh-notebooks-meta-tensorflow-rocm-extrernal-deps/: pyproject.toml
dependencies/odh-notebooks-meta-workbench-datascience-deps/: pyproject.toml
habana/1.13.0/ubi8-python-3.8/: Dockerfile  Pipfile  README.md  pyproject.toml
habana/1.9.0/ubi8-python-3.8/: Dockerfile  Pipfile  README.md  pyproject.toml
jupyter/datascience/ubi9-python-3.11/: Dockerfile  Dockerfile.cpu  Dockerfile.konflux.cpu  Pipfile  pylock.toml  pyproject.toml  requirements-elyra.txt  requirements.txt  setup-elyra.sh
jupyter/datascience/ubi9-python-3.12/: Dockerfile.cpu  Dockerfile.konflux.cpu  Pipfile  apache-arrow-48430.patch  prefetch-input  pylock.toml  pyproject.toml  requirements.cpu.txt  requirements.txt  setup-elyra.sh  setup-kale.sh
jupyter/datascience/ubi9-python-3.9/: Dockerfile  Pipfile  deps  jupyter_elyra_config.py  mongodb-org-6.0.repo-x86_64  mssql-2022.repo-x86_64  pyproject.toml  requirements.in  requirements.txt  setup-elyra.sh
jupyter/minimal/ubi8-python-3.8/: Dockerfile  Pipfile  pyproject.toml  requirements.in  requirements.txt  start-notebook.sh
jupyter/minimal/ubi9-python-3.11/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.konflux.cpu  Dockerfile.konflux.cuda  Dockerfile.konflux.rocm  Dockerfile.rocm  Pipfile  pylock.toml  pyproject.toml  requirements.txt  start-notebook.sh
jupyter/minimal/ubi9-python-3.12/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.konflux.cpu  Dockerfile.konflux.cuda  Dockerfile.konflux.rocm  Dockerfile.rocm  Pipfile  pylock.toml  pyproject.toml  requirements.cpu.txt  requirements.cuda.txt  requirements.pandoc.cpu.txt  requirements.pandoc.cuda.txt  requirements.pandoc.rocm.txt  requirements.rocm.txt  requirements.txt  rocm-pip.conf  start-notebook.sh
jupyter/pytorch+llmcompressor/ubi9-python-3.12/: Dockerfile.cuda  Dockerfile.konflux.cuda  Pipfile  README.md  pylock.toml  pyproject.toml  requirements.cuda.txt  requirements.txt
jupyter/pytorch/ubi9-python-3.12/: Dockerfile.cuda  Dockerfile.konflux.cuda  Pipfile  pylock.toml  pyproject.toml  requirements.cuda.txt  requirements.txt  targets.custom.in
jupyter/tensorflow/ubi9-python-3.12/: Dockerfile.cuda  Dockerfile.konflux.cuda  Pipfile  pylock.toml  pyproject.toml  requirements.cuda.txt  requirements.txt
jupyter/trustyai/ubi9-python-3.12/: Dockerfile.cowsay.cpu  Dockerfile.cpu  Dockerfile.konflux.cpu  Pipfile  devel_env_setup.sh  pylock.toml  pyproject.toml  requirements.cpu.txt  requirements.txt
rstudio/rhel9-python-3.11/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.konflux.cpu  Dockerfile.konflux.cuda  Pipfile  pylock.toml  pyproject.toml  requirements.txt  rsession.conf  rsession.sh  run-rstudio.sh  setup_rstudio.py
rstudio/rhel9-python-3.11/httpd/: httpd.conf  rstudio-cgi.conf
(+2592 files in other folders)
