# https://docs.astral.sh/uv/concepts/projects/config/
[project]
name = "notebooks"
version = "3.4"
description = "Open Data Hub / OpenShift AI Notebook / Workbench images, and tests for the same in Python."
readme = "README.md"
requires-python = ">=3.14,<3.15"

# https://docs.astral.sh/uv/concepts/projects/dependencies/#managing-dependencies
dependencies = []

[dependency-groups]
dev = [
    "prek",
    "pyright",
    "ruff",
    #
    "pytest",
    "pytest-cov",
    "allure-pytest",
    "pytest-subtests",
    #
    "pyfakefs",
    # Python 3.14 changed the internal typing._eval_type() function signature - it now includes a new prefer_fwd_module parameter
    # and so pydantic 2.10+ is required to work with from __future__ import annotations on Python 3.14
    "pydantic>=2.13.0",
    "requests",
    #
    "pyyaml",
    # renovate config is in json5
    "pyjson5",
    "ruamel-yaml",
    "structlog",
    #
    "testcontainers",
    "docker",
    "podman",
    "kubernetes",
    "openshift-python-wrapper",
    # Transitive via openshift-python-wrapper → fastmcp;
    "authlib>=1.7.2",
    "typer",
    # certifi provides CA bundle needed on macOS where Python's bundled OpenSSL
    # does not read from the system Keychain, causing CERTIFICATE_VERIFY_FAILED
    "certifi",
    # keyring provides OS-level secret storage for OAuth tokens (macOS Keychain,
    # GNOME Keyring, KWallet) used by scripts/cve/jira_auth.py
    "keyring",
    # pygments provides syntax highlighting for pretty-printed JSON in log output
    "pygments",
    # rich powers the local live progress table in ci/check-image-availability.py
    "rich>=15.0.0",
    "inline-snapshot>=0.34.2",
]

[tool.uv]
required-version = ">=0.10,<0.12"
# Supply-chain hardening: only resolve package versions published ≥3 days ago.
# See https://docs.astral.sh/uv/concepts/resolution/#time-restricted-reproducible-resolutions
exclude-newer = "3 days"
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
# Assert the lockfile is installable on our two target platforms.
# uv lock will fail if any dependency can't be resolved for these.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
# Reject source distributions — require pre-built wheels for all deps.
# Catches packages that need system libraries to build from source
# (e.g. gssapi needing libkrb5-dev) before they reach CI.
no-build = true
# Workaround for https://github.com/astral-sh/uv/issues/12607 —
# no-build blocks local source trees too
no-binary-package = [
    # exempt our own packages
    "notebooks",
    "copr-rebuild",
    # sdist-only deps (pure Python, no system library requirements)
    "openshift-python-wrapper", "pyhelper-utils", "python-simple-logger", "timeout-sampler",
]
# koji hard-depends on requests-gssapi, but we only use unauthenticated
# XML-RPC calls (koji.ClientSession) — no GSSAPI auth needed.
# gssapi has no Linux wheels and needs libkrb5-dev to build from source.
exclude-dependencies = ["requests-gssapi"]

[tool.uv.workspace]
members = ["base-images/copr"]

# https://github.com/astral-sh/uv/issues/3957#issuecomment-2659350181
[build-system]
requires = ["uv-build>=0.11.8,<0.12"]
build-backend = "uv_build"

# https://docs.astral.sh/uv/concepts/build-backend/#modules
[tool.uv.build-backend]
module-name = ["ntb"]
module-root = ""

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = ["ntb", "ci", "scripts"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

# inspired from https://github.com/red-hat-data-services/ods-ci/blob/master/pyproject.toml

# https://15r10nk.github.io/inline-snapshot/configuration/
[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

# https://microsoft.github.io/pyright/#/configuration
[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = "error"
reportUnboundVariable = "error"
reportGeneralTypeIssues = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportPossiblyUnboundVariable = "warning"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
include = ["ci/", "tests/", "base-images/"]
ignore = [ ]
pythonVersion = "3.14"
pythonPlatform = "Linux"

# docker/podman exec() stubs type output as Iterator[bytes]; runtime returns bytes.
[[tool.pyright.executionEnvironments]]
root = "tests/containers"
reportAttributeAccessIssue = "none"

# https://docs.astral.sh/ruff/configuration
[tool.ruff]
include = ["pyproject.toml", "ci/**/*.py", "ntb/**/*.py", "tests/**/*.py", "base-images/**/*.py", "jupyter/**/*.ipynb"]
exclude = [ ]
target-version = "py314"
line-length = 120

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
preview = true
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "E", "W", # pycodestyle errors/warnings
    "F", # Pyflakes
    "FA", # flake8-future-annotations
    "FLY", # flynt
    "G", # flake8-logging-format
    "I", # isort
    "INP", # flake8-no-pep420
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "NPY002", # numpy-legacy-random
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # misc lints
    "PL", # pylint
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "S", # flake8-bandit: security checks
    "T10", # flake8-debugger
    "TCH", # type-checking imports
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    # intentionally disabled
    "E203", # space before : (needed for how black formats slicing)
    "ISC001", # single-line-implicit-string-concatenation (ruff format wants this disabled)
    "G004", # Logging statement uses f-string (convenient, and we don't care about performance too much)
    # various limits and unimportant warnings
    "E501", # Line too long
    "E741", # Ambiguous variable name: `l`
    "PLR0904", # Too many public methods (56 > 20)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition (6 > 5)
    "PLR0915", # Too many statements
    "PLR0917", # Too many positional arguments (10/5)
    "PLR0917", # Too many positional arguments (7/5)
    "PLR0911", # Too many return statements (9 > 6)
    "PLR0914", # Too many local variables (19/15)
    "PLR2004", # Magic value used in comparison
    # "W503", # not yet implemented; line break before binary operator
    # "W504", # not yet implemented; line break after binary operator
    "PLR1702", # Too many nested blocks (7 > 5)
    # flake8-bandit: noisy, low-value rules
    "S404", # subprocess-module-import: flagging `import subprocess` is too noisy
    "S607", # start-process-with-partial-path: flags well-known executables (git, make, kubectl)
    # TODO
    "B006", # Do not use mutable data structures for argument defaults
    "COM812", # Trailing comma missing
    "INP001", # File `ods_ci/tests/Resources/Page/ODH/JupyterHub/jupyter-helper.py` is part of an implicit namespace package. Add an `__init__.py`.
    "N806", # Variable `outputText` in function should be lowercase
    "N813", # Camelcase `ElementTree` imported as lowercase `et`
    "N816", # Variable `rotatingHandler` in global scope should not be mixedCase
    "N999", # Invalid module name: 'createPolarionTestRun'
    "PERF401", # Use a list comprehension to create a transformed list
    "PLC1901", # `filter_value != ""` can be simplified to `filter_value` as an empty string is falsey
    "PLR6201", # Use a `set` literal when testing for membership
    "PLR6301", # Method `_render_template` could be a function, class method, or static method
    "PLW1514", # `codecs.open` in text mode without explicit `encoding` argument
    "PLW2901", # `for` loop variable `tag_it` overwritten by assignment target
    "RET501", # Do not explicitly `return None` in function if it is the only possible return value
    "RET504", # Unnecessary assignment to `names` before `return` statement
    "RET505", # Unnecessary `else` after `return` statement
    "UP015", # Unnecessary open mode parameters
    "UP031", # format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call
    "RET507", # Unnecessary `else` after `continue` statement
    "RET508", # Unnecessary `elif` after `break` statement
    # ruff 0.15.18+ preview rules — too noisy for existing try/contextmanager patterns
    "PLW0717", # too-many-statements-in-try-clause
    "RUF075", # fallible-context-manager
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Don't suggest moving types used in Pydantic models into `if TYPE_CHECKING` import blocks
# https://docs.astral.sh/ruff/settings/#lint_flake8-type-checking_runtime-evaluated-base-classes
flake8-type-checking.runtime-evaluated-base-classes = ["pydantic.BaseModel"]

# https://docs.astral.sh/ruff/settings/#lint_pep8-naming_classmethod-decorators
pep8-naming.classmethod-decorators = ["pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
# Inner functions are serialized and executed inside containers, so imports must be local.
"tests/containers/workbenches/gpu_library_loading_test.py" = ["PLC0415"]
# Ignore many stylistic and formatting rules for notebooks, but keep Pylint rules like PLW0128
"jupyter/**/*.ipynb" = [
    "B004",    # flake8-bugbear: unreliable-callable-check
    "E",       # pycodestyle errors (formatting handled by ruff format)
    "F",       # Pyflakes (undefined names common in notebook cell-split execution)
    "W",       # pycodestyle warnings
    "Q",       # flake8-quotes (notebooks use mixed quoting styles)
    "I",       # isort (import ordering not enforced in notebooks)
    "PLC0414", # pylint: useless-import-alias
    "PLC0415", # pylint: import-outside-toplevel (notebooks import inside cells)
    "PLR0402", # pylint: manual-from-import
    "PLW0108", # pylint: unnecessary-lambda
    "RUF100",  # ruff: unused-noqa directive
    "S101",    # flake8-bandit: assert (notebooks use assert for inline checks)
    "S602",    # flake8-bandit: subprocess-popen-with-shell-equals-true
    "S603",    # flake8-bandit: subprocess-without-shell-equals-true
    "S604",    # flake8-bandit: call-with-shell-equals-true
]
"jupyter/**/test/test_notebook.ipynb" = [
    "PLC2701", # pylint: private-name-import (%%writefile creates _-prefixed modules)
    "PLW1510", # pylint: subprocess-run-without-check (subprocess usage in tests only)
]
# Tests, CI scripts, and build helpers legitimately use assert and subprocess with shell=True
# S602: subprocess-popen-with-shell-equals-true
# S604: call-with-shell-equals-true
"tests/**/*.py" = ["S101", "S602", "S603", "S604"]
"ci/**/*.py" = ["S101", "S602", "S603", "S604"]
"scripts/**/*.py" = ["S602", "S603", "S604"]
# Test assertion helpers use assert by design
"ntb/**/*.py" = ["S101"]
# Copr client wraps CLI commands via subprocess with controlled arguments
"base-images/**/*.py" = ["S602", "S603", "S604"]

# https://docs.astral.sh/ruff/formatter
[tool.ruff.format]
exclude = ["*.ipynb"]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

docstring-code-format = true
docstring-code-line-length = "dynamic"
