# [HERMETIC] pyproject.toml changes for hermetic build:
#   - Added uv + micropipenv as explicit deps (cachi2 prefetches everything in dependencies[])
#   - Added ipykernel + debugpy explicitly (previously pulled transitively)
#   - Added odh-notebooks-meta-workbench-datascience-deps (shared meta-package replacing
#     individual deps like boto3, kafka-python-ng, numpy, pandas, plotly, scipy, scikit-learn)
#   - Upgraded feast ~=0.59.0 (pinned for RHOAI 3.4 compatibility)
#   - py-spy excluded via exclude-dependencies (FIPS / RHAIENG-58916)
#   - Added urllib3>=2.7.0 override (CVE-2026-44431, CVE-2026-44432; CVE-2025-66418 in 2.6.0)
#   - protobuf==6.31.1 override (AIPCC-13675: UPB C extension segfault on s390x)
#   - Added local path source for the meta-package
[project]
name = "notebooks"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Installer/tooling used in Docker/CI (prefetched with main deps for cachi2 offline)
    "uv",
    "micropipenv[toml]",

    # Base packages
    "wheel",
    "setuptools",

    "debugpy",

    # RHAIENG-6157: VS Code Jupyter extension requires these
    #  ipykernel: raw-kernel gate
    #  jupyter+notebook: Jupyter-Server gate (s390x/ppc64le, no built-in native zeromq for nodejs)
    "ipykernel",
    "jupyter",
    "notebook",

    # RHAIENG-1475: skl2onnx excluded on s390x for codeserver
    "skl2onnx; platform_machine != 's390x'",
    "odh-notebooks-meta-workbench-datascience-deps",

    # Some extra useful packages
    "opencensus",
    "smart-open",
    "virtualenv",
    "prometheus-client",
    "ripgrep",
]

[tool.uv]
exclude-dependencies = ["py-spy"]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]

override-dependencies = [
    # AIPCC-13675: protobuf 6.33.6+ UPB C extension segfaults on s390x
    "protobuf==6.31.1",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
