# [HERMETIC] 2.25 codeserver: hermetic build deps + original rhoai-2.25 datascience pins.
[project]
name = "notebooks"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Installer/tooling (prefetched for cachi2 offline install).
    # uv/ripgrep patched to RH wheels post-lock (PyPI sdists break hermeto cargo prefetch).
    "uv",
    "micropipenv[toml]",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",

    "debugpy",

    # RHAIENG-6157: VS Code Jupyter extension requires these
    "ipykernel~=6.30.1",
    "jupyter",
    "notebook",

    # Datascience packages (rhoai-2.25 pins)
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "matplotlib~=3.10.6",
    "numpy~=2.3.3",
    "pandas~=2.3.2",
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1; platform_machine != 's390x'",
    "onnx>=1.21.0; platform_machine != 's390x'",
    "kubeflow-training==1.9.3",
    "feast~=0.54.1",

    # Some extra useful packages
    "opencensus~=0.11.4",
    "smart-open~=7.3.1",
    "virtualenv~=20.34.0",
    "prometheus-client~=0.22.1",

    # Hermetic code-server build (ripgrep wheel for @vscode/ripgrep postinstall)
    "ripgrep",
]

[tool.uv]
environments = [
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'ppc64le'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 's390x'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'aarch64'",
]
override-dependencies = [
    "urllib3>=2.6.0",
    "pillow>=12.1.1",
]
