[project]
name = "notebooks-datascience-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Datascience and ML packages
    "boto3~=1.40.52",
    "kafka-python-ng~=2.2.3",
    "matplotlib~=3.10.7",
    "numpy~=2.3.4",
    "pandas~=2.3.3",
    "plotly~=6.3.1",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.2",
    "skl2onnx~=1.19.1; platform_machine != 's390x'",
    "onnxconverter-common~=1.13.0",

    # Kubeflow and related
    "kubeflow-training==1.9.3",
    "feast~=0.58.0",

    # Additional useful packages
    "ipykernel~=6.30.1",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
