[project]
name = "notebooks-jupyterlab-datascience-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Extended JupyterLab packages for datascience notebooks
    "odh-elyra==4.3.2",
    "jupyter-bokeh~=4.0.5",
    "jupyterlab-lsp~=5.1.1",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
