[project]
name = "notebooks-jupyterlab-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # JupyterLab core packages
    "jupyterlab==4.4.9",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",

    # JupyterLab extensions
    "jupyterlab-git~=0.51.2",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # ODH specific
    "odh-jupyter-trash-cleanup==0.1.1",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
