[project]
name = "odh-notebooks-meta-jupyterlab-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "jupyterlab",
    "jupyter-server",
    "jupyter-server-proxy",
    "jupyter-server-terminals",
    "jupyterlab-git",
    "nbdime",
    "nbgitpuller",
    "odh-jupyter-trash-cleanup",
    "setuptools<81",  # RHAIENG-5847: >=81 emits pkg_resources UserWarning via google namespace packages
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]
